Add FontAwesome icons library and make container to be responsive in display

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/leon.css" />
     <!-- add the normalize css file -->
     <link rel="stylesheet" href="css/normalize.css" />
+    <!-- add All.min.css Fonts Awesome Icon library -->
+    <link rel="stylesheet" href="css/all.min.css" />
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,5 +20,8 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+  <div class="parent"> 
+    <div class="container">Test test</div>
+  </div>
 </html>
