--- a/index.html
+++ b/index.html
@@ -21,7 +21,30 @@
     />
   </head>
   <body>
-  <div class="parent"> 
-    <div class="container">Test test</div>
-  </div>
+    <div class="header">
+      <div class="container">
+        <img class="logo" src="images/logo.png" alt="" />
+        <div class="links">
+          <span class="icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+          <ul>
+            <li><a href="#services">services</a></li>
+
+            <li><a href="#prtofolio">prtofolio</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#Contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="landing">
+      <div class="intro-Text">
+        <h2>Hello There</h2>
+        <p>We are Leon - Super Creative & Minimal Agency Web Template</p>
+      </div>
+    </div>
+  </body>
 </html>
