--- a/index.html
+++ b/index.html
@@ -40,11 +40,158 @@
         </div>
       </div>
     </div>
+    <!-- start landing -->
     <div class="landing">
       <div class="intro-Text">
         <h2>Hello There</h2>
         <p>We are Leon - Super Creative & Minimal Agency Web Template</p>
       </div>
     </div>
+    <!-- end landing -->
+
+    <!-- start features -->
+    <div class="features">
+      <div class="container">
+        <div class="feat">
+          <i class="fas fa-magic fa-3x"></i>
+          <h2>Tell Us Your Idea</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum,
+            hic exercitationem facere ex a natus voluptas aperiam,
+          </p>
+        </div>
+        <div class="feat">
+          <i class="far fa-gem fa-3x"></i>
+          <h2>We Will Do All The Work</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum,
+            hic exercitationem facere ex a natus voluptas aperiam,
+          </p>
+        </div>
+        <div class="feat">
+          <i class="fas fa-globe-asia fa-3x"></i>
+          <h2>Your Product is Worldwide</h2>
+          <p>
+            molestiae quas id temporibus repellendus autem libero laborum ipsum
+            optio. Esse, laboriosam temporibus.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- end features -->
+
+    <!-- start services -->
+    <div class="services">
+      <div class="container">
+        <h2 class="special-heading">Services</h2>
+        <p>Don't be busy, be productive</p>
+
+        <div class="services-content">
+          <div class="col">
+            <div class="srv">
+              <i class="fas fa-palette fa-2x"></i>
+              <div class="text">
+                <h2>Graphic Design</h2>
+                <p>
+                  Graphic design is the process of visual communication and
+                  problem-solving using one or more of typography, photography
+                  and illustration.
+                </p>
+              </div>
+            </div>
+            <div class="srv">
+              <i class="fab fa-sketch fa-2x"></i>
+              <div class="text">
+                <h2>UI & UX</h2>
+                <p>
+                  Process of enhancing user satisfaction with a product by
+                  improving the usability, accessibility, and pleasure provided
+                  in the interaction.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="srv">
+              <i class="fas fa-vector-square fa-2x"></i>
+              <div class="text">
+                <h2>Web Design</h2>
+                <p>
+                  Web design encompasses many different skills and disciplines
+                  in the production and maintenance of websites.
+                </p>
+              </div>
+            </div>
+            <div class="srv">
+              <i class="fas fa-pencil-ruler fa-2x"></i>
+              <div class="text">
+                <h2>Web Development</h2>
+                <p>
+                  Web development is a broad term for the work involved in
+                  developing a web site for the Internet or an intranet
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col three">
+            <div class="image">
+              <img src="./images/mountain Black and white.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- end services -->
+    <!-- start protofolio -->
+
+    <div class="protofolio">
+      <div class="container">
+        <div class="heading">
+          <h2 class="special-heading">Protofolio</h2>
+          <p>if you do it right, it will last for ever.</p>
+        </div>
+        <div class="projects">
+          <div class="project">
+            <div class="image">
+              <img src="./images/portfolio-1.jpg" alt="" />
+            </div>
+            <div class="text">
+              <h2>Project Here</h2>
+              <p>
+                My creative ability is very difficult to measure because it can
+                manifest in so many surprising and.
+              </p>
+            </div>
+          </div>
+          <div class="project">
+            <div class="image">
+              <img src="./images/portfolio-2.jpg" alt="" />
+            </div>
+            <div class="text">
+              <h2>Project Here</h2>
+              <p>
+                My creative ability is very difficult to measure because it can
+                manifest in so many surprising and.
+              </p>
+            </div>
+          </div>
+          <div class="project">
+            <div class="image">
+              <img src="./images/portfolio-3.jpg" alt="" />
+            </div>
+            <div class="text">
+              <h2>Project Here</h2>
+              <p>
+                My creative ability is very difficult to measure because it can
+                manifest in so many surprising and.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end protofolio -->
   </body>
 </html>
