--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           <ul>
             <li><a href="#services">services</a></li>
 
-            <li><a href="#prtofolio">prtofolio</a></li>
+            <li><a href="#portfolio">portfolio</a></li>
             <li><a href="#about">about</a></li>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="#contact">contact</a></li>
           </ul>
         </div>
       </div>
@@ -81,7 +81,7 @@
     <!-- end features -->
 
     <!-- start services -->
-    <div class="services">
+    <div class="services" id="services">
       <div class="container">
         <h2 class="special-heading">Services</h2>
         <p>Don't be busy, be productive</p>
@@ -146,7 +146,7 @@
     <!-- end services -->
     <!-- start protofolio -->
 
-    <div class="protofolio">
+    <div class="protofolio" id="portfolio">
       <div class="container">
         <div class="heading">
           <h2 class="special-heading">Protofolio</h2>
@@ -193,5 +193,67 @@
       </div>
     </div>
     <!-- end protofolio -->
+    <!-- Start about -->
+    <div class="about" id="about">
+      <div class="container">
+        <div class="head">
+          <h2 class="special-heading">About</h2>
+          <p>Less is more work</p>
+        </div>
+        <div class="about-content">
+          <div class="image">
+            <img src="./images/about.jpg" alt="" />
+          </div>
+          <div class="text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+              porro modi quia necessitatibus numquam dolore dignissimos, maxime
+              dolorum, autem consectetur quos, nesciunt accusamus inventore
+              architecto. Fugit nisi quaerat explicabo tempore.
+            </p>
+            <hr />
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Deserunt, porro animi amet autem sunt officiis, ratione,
+              consequatur cum sit itaque reprehenderit facere eligendi
+              consequuntur voluptas necessitatibus eveniet vitae provident
+              doloribus!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end about -->
+
+    <!-- start contact -->
+    <div class="contact" id="contact">
+      <div class="container">
+        <div class="head">
+          <h2 class="special-heading">Contact</h2>
+          <p>we are born to create</p>
+        </div>
+        <div class="info">
+          <p>Feel free to drop us a line at:</p>
+          <a href="mailto:leonagency@mail.com?subject=Contact" class="link"
+            >leonagency@mail.com</a
+          >
+          <div class="socail-media">
+            Find us on Social Network
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- end contant -->
+    <!-- start footer -->
+    <div class="footer">
+      <div class="copy-rights">
+        <p>&copy; 2021<span>Leon</span>All Rights Resereved</p>
+      </div>
+    </div>
+    <!-- end footer -->
   </body>
 </html>
