the final copy from the first html and css project by Mustafa Mhd

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- start features -->
     <div class="features">
-      <div class="container">
+      <div class="container grid-adding">
         <div class="feat">
           <i class="fas fa-magic fa-3x"></i>
           <h2>Tell Us Your Idea</h2>
@@ -86,7 +86,7 @@
         <h2 class="special-heading">Services</h2>
         <p>Don't be busy, be productive</p>
 
-        <div class="services-content">
+        <div class="services-content grid-adding">
           <div class="col">
             <div class="srv">
               <i class="fas fa-palette fa-2x"></i>
@@ -152,7 +152,7 @@
           <h2 class="special-heading">Protofolio</h2>
           <p>if you do it right, it will last for ever.</p>
         </div>
-        <div class="projects">
+        <div class="projects grid-adding">
           <div class="project">
             <div class="image">
               <img src="./images/portfolio-1.jpg" alt="" />
